--- a/example.env
+++ b/example.env
@@ -10,7 +10,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=trevls
 DB_USERNAME=root
-DB_PASSWORD=dbpassword
+DB_PASSWORD=dinesh770
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
